# solana-opcode-guide

./: .gitignore  CLAUDE.md  CNAME  README.md  _config.yml
.claude/: settings.json
examples/: .gitignore  Cargo.toml  extra-vanity-keypair.json
examples/counter/: .gitignore  Cargo.toml
examples/counter/artifacts/: rs-disassembly.s
examples/counter/artifacts/dumps/: asm.txt  rs.txt
examples/counter/artifacts/snippets/asm/: cpi-setup.txt  entrypoint.txt  increment-map.txt  init-find-pda.txt  init-map-checks.txt  init-pda-compare.txt  init-seeds.txt  min-balance.txt  pda-checks-inc.txt  seeded-cpi.txt  speculative-inc.txt  store-seed.txt  user-data-len.txt
examples/counter/deploy/: counter-keypair.json
examples/counter/src/: constants.rs  lib.rs  program.rs  tests.rs
examples/counter/src/counter/: counter.s
examples/deploy/: examples-keypair-extra.json  examples-keypair.json
examples/fibonacci/: .gitignore  Cargo.toml
examples/fibonacci/artifacts/: rs-disassembly.s
examples/fibonacci/artifacts/dumps/: asm.txt  rs.txt
examples/fibonacci/src/: program.rs  tests.rs
examples/fibonacci/src/fibonacci/: fibonacci.s
examples/hello-dasmac/: .gitignore  Cargo.toml
examples/hello-dasmac/artifacts/: rs-disassembly.s
examples/hello-dasmac/artifacts/dumps/: asm.txt  rs.txt
examples/hello-dasmac/deploy/: hello-dasmac-keypair.json
examples/hello-dasmac/dump-examples/: rs.txt
examples/hello-dasmac/dumps/: asm-disassembly.json  asm.txt  rs.s  rs.txt
examples/hello-dasmac/snippets/dumps/: rs.txt
examples/hello-dasmac/snippets/test_rs/: result.txt
examples/hello-dasmac/src/: lib.rs  program.rs  tests.rs
examples/hello-dasmac/src/hello-dasmac/: hello-dasmac.s
examples/hello-dasmac/test-runs/: asm.txt  rs.txt
examples/memo/: .gitignore  Cargo.toml
examples/memo/artifacts/: rs-disassembly.s
examples/memo/artifacts/dumps/: rs.txt
examples/memo/deploy/: memo-keypair.json
examples/memo/dumps/: asm.txt  rs.s  rs.txt
examples/memo/snippets/: asm-constants.txt  asm-error-checking.txt  asm-logging.txt
examples/memo/snippets/dumps/: asm.txt
examples/memo/snippets/test_asm_fail/: result.txt  test.txt
examples/memo/snippets/test_asm_pass/: test.txt
examples/memo/snippets/test_rs/: result.txt
examples/memo/src/: program.rs  tests.rs
examples/memo/src/memo/: memo.s
examples/memo/test-runs/: asm_fail.txt  asm_pass.txt  rs.txt
examples/src/: lib.rs
examples/src/hello-dasmac/: hello-dasmac.s
examples/src/hello-world/: hello-world.s
examples/test-utils/: Cargo.toml
examples/test-utils/src/: lib.rs
examples/transfer/: .gitignore  Cargo.toml
examples/transfer/artifacts/: rs-disassembly.s
examples/transfer/artifacts/dumps/: asm.txt  rs.txt
examples/transfer/src/: lib.rs  program.rs  tests.rs
examples/transfer/src/transfer/: transfer.s
examples/tree/: .gitignore  Cargo.toml  build.rs
examples/tree/artifacts/: rs-disassembly.s
examples/tree/artifacts/dumps/: asm.txt  rs.txt
examples/tree/build-macros/: Cargo.toml
examples/tree/build-macros/src/: lib.rs
examples/tree/common/: Cargo.toml
examples/tree/common/src/: lib.rs
examples/tree/interface/: Cargo.toml
examples/tree/interface/src/: asm.rs  bindings.rs  common.rs  lib.rs  stack.rs
examples/tree/macros/: Cargo.toml
examples/tree/macros/src/: lib.rs
examples/tree/specs/: cu-overhead-analysis.md  insert-fixup-hardcoded-branches.md  insert-fixup-rotation.md  insert-tests.md  parity-workflow.md  remove-tests.md  remove.md  rotate-subtree-specialization.md  test-framework-cleanup.md  tree-invariants.md
examples/tree/src/: lib.rs  program.rs  tests.rs
examples/tree/src/tests/: common.rs  entrypoint.rs  general.rs  init.rs  insert.rs  insert_tree.rs  mod.rs  pda.rs  remove.rs
examples/tree/src/tree/: tree.s
examples/tree/types/: Cargo.toml
examples/tree/types/src/: injection.rs  lib.rs
examples/utils/build-examples/: Cargo.toml
examples/utils/build-examples/src/: main.rs
examples/utils/program-deps/: Cargo.toml
examples/utils/program-stub/: Cargo.toml
examples/utils/program-stub/src/: lib.rs
examples/utils/test-utils/src/: lib.rs
(+285 files in other folders)
