# cspell:word cfgs

[workspace]
members = [
  "counter",
  "fibonacci",
  "hello-dasmac",
  "memo",
  "transfer",
  "utils/build-examples",
  "utils/deps/build",
  "utils/deps/program"
]
resolver = "2"

[workspace.dependencies]
cargo-manifest = "0.19.1"
fib-rs = "1.0.0"
mollusk-svm = "0.10.1"
pinocchio = {version = "0.10.1", features = ["cpi"]}
regex = "1.12.2"
solana-sdk = "3.0.0"

[workspace.lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(target_os, values("solana"))']}
