# cspell:word cfgs

[workspace]
members = [
  "counter",
  "fibonacci",
  "hello-dasmac",
  "memo",
  "transfer",
  "tree",
  "tree/build-macros",
  "tree/common",
  "utils/build-examples",
  "utils/deps/build",
  "utils/deps/program"
]
resolver = "2"

[workspace.dependencies]
cargo-manifest = "0.19.1"
convert_case = "0.11.0"
fib-rs = "1.0.0"
mollusk-svm = "0.10.1"
pinocchio = {version = "0.10.1", features = ["cpi"]}
pinocchio-system = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.44"
regex = "1.12.2"
solana-rent = "3.0.0"
solana-sdk = "3.0.0"
syn = { version = "2.0.114", features = ["full"] }

[workspace.lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(target_os, values("solana"))']}
