[dependencies]
pinocchio.workspace = true
fib-rs.workspace = true

[dev-dependencies]
mollusk-svm.workspace = true
solana-sdk.workspace = true
fib-rs.workspace = true
test-utils.path = "../utils/test-utils"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package]
edition = "2021"
name = "fibonacci"
version = "0.1.0"
