[dependencies]
pinocchio.workspace = true

[dev-dependencies]
fib-rs.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true
test-utils.path = "../utils/test-utils"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package]
edition = "2021"
name = "fibonacci"
version = "0.1.0"
