[build-dependencies]
common = { path = "common", features = ["std"] }

[dependencies]
pinocchio.workspace = true
common.path = "common"

[dev-dependencies]
mollusk-svm.workspace = true
solana-sdk.workspace = true
test-utils.path = "../utils/test-utils"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package]
edition = "2021"
name = "tree"
version = "0.1.0"
