[build-dependencies]
interface.path = "interface"

[dependencies]
pinocchio.workspace = true
interface.path = "interface"

[dev-dependencies]
mollusk-svm.workspace = true
solana-sdk.workspace = true
test-utils.path = "../utils/test-utils"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package]
edition = "2021"
name = "tree"
version = "0.1.0"
