[build-dependencies]
tree-interface.workspace = true

[dependencies]
pinocchio.workspace = true
tree-interface.workspace = true

[dev-dependencies]
mollusk-svm.workspace = true
solana-sdk.workspace = true
test-utils.path = "../utils/test-utils"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package]
edition = "2021"
name = "tree"
version = "0.1.0"
